added product availability check
